[gd_scene load_steps=12 format=2]

[ext_resource path="res://img/boss-sprite.png" type="Texture" id=1]
[ext_resource path="res://scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://img/lunch_box.png" type="Texture" id=3]
[ext_resource path="res://assets/pixel-font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://img/bubble.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 4.5
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.5, 26 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 4 )

[node name="Boss" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 57.5, 2 )
shape = SubResource( 7 )

[node name="LunchBoxBubble" type="Node2D" parent="."]
position = Vector2( -3, -10 )

[node name="Bubble" type="Sprite" parent="LunchBoxBubble"]
position = Vector2( 47, -58 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Message" type="Label" parent="LunchBoxBubble"]
margin_left = 14.0
margin_top = -80.0
margin_right = 78.0
margin_bottom = -59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = ":)"
align = 1

[node name="LunchBox" type="Sprite" parent="LunchBoxBubble"]
position = Vector2( 47, -73 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
